2013-05-06  Cedric Bail

        * Evas: Remove SVG loader from inside the merged tree.

2013-05-06  ChunEon Park (Hermet)

        * Evas: update the map smart members really when it needs to render.

2013-05-05  Jiyoun Park (jypark)

        * Ecore_Input_Evas: Fix ecore_input_evas didn't check the device id of mouse event

2013-05-05  Jiyoun Park (jypark)

        * Evas: Fix gif loader can't load image which has normal frames and error frames

2013-04-03  Rafael Antognolli

        * Evas: Added evas_event_input_mouse_move() for internal use only.
        * Evas: Added evas_event_input_multi_move() for internal use only.

2013-04-29  ChunEon Park (Hermet)

        * Evas: Added evas_object_image_source_clip_set()/get().

2013-04-25  Tom Hacohen

        * Evas textblock: Fixed line size calculation when using multiple
	fonts.

2013-04-25  Jihoon Kim

        * Edje entry: remove duplicated ecore_imf_context_reset in adjusting the selection

2013-04-22  Mike Blumenkrantz

        * Evas: Fix recursive proxy image rendering to just render black

2013-04-22  WooHyun Jung

        * Edje: When selected word exists, selection is cleared and cursor
		remains on the current edje_entry by additional key input.

2013-04-20  Carsten Haitzler (The Rasterman)

        * Ecore-X: Fix selection parser to not use longs - wrong on
        64bit as the rest of ecore-x keeps types to their REAL sizes (ints),
        but xlib uses longs (change size - eg 64bit even though protocol-wise
        the data is DEFINEd as 32bit)

2013-04-19  Jihoon Kim (jihoon)

        * Edje: Remove code to call ecore_imf_context_reset in case of pressing ESC, Return key

2013-04-14  Carsten Haitzler (The Rasterman)

        * Evas: Fix evas gl_x11 to use default depth when visual
        matching so lower depth displays work

2013-04-15  ChunEon Park
        * Evas: If an object goes to be hidden without replacing the cur/prev